# square-mcp

./: Dockerfile  README.md  pyproject.toml  smithery.yaml
src/square_mcp/: server.py
